--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,8 @@
   "require-dev": {
     "phpunit/phpunit": "^9.5"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "require": {
+    "league/flysystem": "^2.4"
+  }
 }
