--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
   },
   "license": "MIT",
   "require": {
-    "league/flysystem": "^2.4"
+    "league/flysystem": "^2.4",
+    "ext-curl": "*"
   }
 }
