--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,28 @@
 {
-  "name": "fisayoafolayan/get-safe-batch-image-downloader",
-  "description": "An app to batch download images from CSV file",
-  "type": "library",
-  "authors": [
-    {
-      "name": "Fisayo Afolayan",
-      "email": "afolayan@pm.me"
+    "name": "fisayoafolayan/get-safe-batch-image-downloader",
+    "description": "An app to batch download images from TXT file",
+    "type": "library",
+    "authors": [
+        {
+            "name": "Fisayo Afolayan",
+            "email": "afolayan@pm.me"
+        }
+    ],
+    "autoload": {
+        "psr-4": {
+            "FisayoAfolayan\\GetSafeBatchImageDownloader\\": "src",
+            "FisayoAfolayan\\GetSafeBatchImageDownloader\\Tests\\": "tests"
+        }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5",
+        "codeception/codeception": "^4.1",
+        "codeception/module-phpbrowser": "^1.0.0",
+        "codeception/module-asserts": "^1.0.0"
+    },
+    "license": "MIT",
+    "require": {
+        "league/flysystem": "^2.4",
+        "ext-curl": "*"
     }
-  ],
-  "autoload": {
-    "psr-4": {
-      "FisayoAfolayan\\GetSafeBatchImageDownloader\\": "src",
-      "FisayoAfolayan\\GetSafeBatchImageDownloader\\Tests\\": "tests"
-    }
-  },
-  "require-dev": {
-    "phpunit/phpunit": "^9.5"
-  },
-  "license": "MIT",
-  "require": {
-    "league/flysystem": "^2.4",
-    "ext-curl": "*"
-  }
 }
